--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Generador de Excusas</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -11,17 +11,16 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js"></script>
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
+      <h1 class="mt-5 text-primary">What's up,<span class="text-danger"> Dog!</span></h1>
+      <img id="imagen" class="img-thumbnail w-25" src="https://lh3.googleusercontent.com/proxy/b6CNNqfQGePhatVnic-moqVGEuxGSKN2xlNG1547FvSijY2gVExy1oSvaCHbg9-nRsvHEkofLowNNEs" alt="Imagen aleatoria" />
+        <p id="excuse" class=" fs-1 fw-bold">My dog eat my homework</p>
+
+        Made with ❤️ K.B by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
